@@ -1185,7 +1185,7 @@
       <title>Archimedes' Constant (pi)</title>
       <title xml:lang="fr">Constante d’Archimède (pi)</title>
       <title xml:lang="nl">Archimede's constante (pi)</title>
-      <title xml:lang="sv">Archimedes konstant (pi)</title>
+      <title xml:lang="sv">Arkimedes konstant (pi)</title>
       <title xml:lang="zh_CN">圆周率(&#x3C0;)</title>
       <names>au:&#x3C0;,r:pi</names>
     </builtin_variable>
